test/Fail/Issue1384.err
Issue1384.agda:18.3-41: error: [CoverageIssue]
Incomplete pattern matching for test. Missing cases:
  test I
  test (App false false c refl (App a b c₁ x x₁ x₂) x₃)
when checking the definition of test

Issue1384.agda:29.3-41: error: [CoverageIssue]
Incomplete pattern matching for test. Missing cases:
  test I
  test (App false false c (App a b c₁ x x₁ x₂) x₃ refl)
when checking the definition of test
